🔥 パスワード再設定の実装 Vueから実装する分がわからず、リクエストを返す、などに留まる部分がある。

--- a/app/views/user_mailer/password_reset.html.erb
+++ b/app/views/user_mailer/password_reset.html.erb
@@ -1,5 +1,9 @@
-<h1>User#password_reset</h1>
+<h1>パスワードのリセットについて</h1>
 
-<p>
-  <%= @greeting %>, find me in app/views/user_mailer/password_reset.html.erb
-</p>
+<p>下のリンクからパスワードをリセットしてください。</p>
+
+<%= link_to "Reset password", edit_api_v1_password_resets_url(@user.reset_token, email: @user.email) %>
+
+<p>このリンクは2時間をすぎると使えなくなります。</p>
+
+<p>もしパスワードのリセットをした覚えがなければ、必ず無視してください。</p>
